changed img file path

--- a/myspace.html
+++ b/myspace.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <head>
     <title>Lexy's Myspace Profile</title>
-    <link rel="stylesheet" href="C:\Users\15034\Front End Projects\myspace_css.css"></head>
+    <link rel="stylesheet" href="myspace_css.css"></head>
 <body>
     <div class="profile-snapshot">
         <h2 id="header">Lexy Ramos</h2>
         <h4 id="header">Computer Science Student</h4>
-        <img id=profile-picture src="C:\Users\15034\Front End Projects\Profile picture.JPG" alt="profile picture">
+        <img id=profile-picture src="Profile picture.JPG" alt="profile picture">
         <p id="about-me">Age: 29<br>Female<br>Independence, Oregon<br>United States<br><br><br>Last Login: 11/5/2023
         </p>
         <p id="mood">Mood: Happy 😀</p>
