added audio player

--- a/myspace.html
+++ b/myspace.html
@@ -11,4 +11,8 @@
         </p>
         <p id="mood">Mood: Happy 😀</p>
     </div>
+    <div class="music-player">
+        <audio controls autoplay src="Dreams (2004 Remaster).mp3" type="audio/mp3">
+        </audio>
+    </div>
 </body>
