--- a/myspace.html
+++ b/myspace.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>Lexy's Myspace Profile</title>
+    <link rel="icon" href="hearts.png" type="image/icon type">
     <link rel="stylesheet" href="myspace_css.css"></head>
 <body>
     <div class="profile-snapshot">
@@ -15,4 +16,16 @@
         <audio controls autoplay src="Dreams (2004 Remaster).mp3" type="audio/mp3">
         </audio>
     </div>
-</body>
+    <div class="interests">
+        <table>
+            <thead><tr>
+                <th colspan="2">Lexy's Interests</th>
+              </tr></thead>
+            <tr><td>General</td>
+            <td>Mom-ing, witch-ing, <br>and sleeping</td></tr>
+            <tr><td>Languages</td>
+            <td>Python: Advanced, <br>HTML5: Intermediate,<br>CSS: Intermediate, <br>SQL: Beginner,<br> C++: Beginner</td></tr>
+            <tr><td>CS Interests</td>
+            <td>Front-End Development, <br>UX/UI, Cybersecurity</td></tr>
+        </table>
+    </div></body>
